--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-loading-skeleton": "^3.5.0",
+    "react-router-dom": "^6.30.0",
+    "react-spinners": "^0.15.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
