--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^6.30.0",
     "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
